@@ -141,11 +141,8 @@ Input_Task::cancel_timer (void *argument)
 // (see Command pattern)
 
 int
-Input_Task::list_timer (void *argument)
+Input_Task::list_timer (void *)
 {
-  // Macro to avoid "warning: unused parameter" type warning.
-  ACE_UNUSED_ARG (argument);
-
   // Dump the timer queue contents.
   this->dump ();
 
@@ -156,11 +153,8 @@ Input_Task::list_timer (void *argument)
 // <Timer_Queue_Test_Driver> class that we are done.
 
 int
-Input_Task::shutdown_timer (void *argument)
+Input_Task::shutdown_timer (void *)
 {
-  // Macro to avoid "warning: unused parameter" type warning.
-  ACE_UNUSED_ARG (argument);
-
 #if defined (ACE_LACKS_PTHREAD_CANCEL)
   // Cancel the thread timer queue task "voluntarily."
   this->queue_->deactivate ();
